objects/HS_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Challenger_Name__c</fullName>
        <formula>HS_Activity__r.Young_Person__r.FirstName &amp;&quot; &quot;&amp; HS_Activity__r.Young_Person__r.LastName</formula>
        <label>Challenger Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Hours_Submitted__c</fullName>
        <inlineHelpText>Date YP submitted hours</inlineHelpText>
        <label>Date Hours Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Hours_Volunteered__c</fullName>
        <inlineHelpText>Date YP has done the hours</inlineHelpText>
        <label>Date Hours Volunteered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Activity__c</fullName>
        <label>HS Activity</label>
        <referenceTo>HS_Activity__c</referenceTo>
        <relationshipLabel>HS Hours</relationshipLabel>
        <relationshipName>HS_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HS_Cycle__c</fullName>
        <label>HS Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Hours_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HS Hours Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Hours__c</fullName>
        <label>HS Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HS_hours_notes__c</fullName>
        <label>HS hours notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signposting_Opportunity__c</fullName>
        <label>Signposting Opportunity</label>
        <referenceTo>Volunteering_Opportunity__c</referenceTo>
        <relationshipLabel>HS Hours</relationshipLabel>
        <relationshipName>HS_Hours</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>HS Hours</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Challenger_Name__c</columns>
        <columns>Date_Hours_Submitted__c</columns>
        <columns>Date_Hours_Volunteered__c</columns>
        <columns>HS_Activity__c</columns>
        <columns>HS_Cycle__c</columns>
        <columns>HS_Hours__c</columns>
        <columns>HS_hours_notes__c</columns>
        <columns>HS_Hours_Verified__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Summer_15_HRs_logged_RCA_weekend</fullName>
        <columns>NAME</columns>
        <columns>HS_Activity__c</columns>
        <columns>Date_Hours_Volunteered__c</columns>
        <columns>HS_Hours__c</columns>
        <columns>HS_hours_notes__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Challenger_Name__c</columns>
        <columns>HS_Hours_Verified__c</columns>
        <columns>HS_Cycle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HS_Activity__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Hours_Volunteered__c</field>
            <operation>equals</operation>
            <value>9/5/2015,9/6/2015,9/12/2015,9/13/2015</value>
        </filters>
        <label>Summer 15 - HRs logged on RCA weekends</label>
    </listViews>
    <nameField>
        <displayFormat>HSH-{00000000}</displayFormat>
        <label>HS Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HS Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hours_limit</fullName>
        <active>true</active>
        <errorConditionFormula>HS_Hours__c &gt; 10</errorConditionFormula>
        <errorMessage>You can only log up to 10 hours at once.</errorMessage>
    </validationRules>
</CustomObject>